--- a/src/styles/comps/header.styl
+++ b/src/styles/comps/header.styl
@@ -1,6 +1,7 @@
 .header
     display flex
+    height 100%
     align-items center
     justify-content flex-end
-    flex 0 0 100px
-    height 100%
+    flex 0 0 80px
+    background $white
