--- a/src/styles/utils/mixins.styl
+++ b/src/styles/utils/mixins.styl
@@ -5,3 +5,10 @@ marginLeftRight($left, $right = $left)
 paddingLeftRight($left, $right = $left)
     padding-left $left
     padding-right $right
+
+paddingTopBottom($top, $bottom = $top)
+    padding-top $top
+    padding-bottom $bottom
+
+Montserrat()
+    font-family Montserrat
