--- a/src/styles/utils/fonts.styl
+++ b/src/styles/utils/fonts.styl
@@ -1,4 +1,5 @@
  @font-face
    font-family Montserrat
    font-style normal
-   src url('../../assets/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype')
+   src url('../../assets/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype'),
+        url('../../assets/fonts/Montserrat/Montserrat-Light.ttf') format('truetype')
