Завершил этап основной верстки, быстро накидал фейковую логику, завтра меня ждут финальные штрихи

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -7,7 +7,7 @@
 @import 'comps/footer.styl'
 @import 'comps/page_block.styl'
 @import 'comps/ui_kit.styl'
-@import 'comps/card_item.styl'
+@import 'comps/cards.styl'
 
 
 *
