--- a/src/styles/utils/mixins.styl
+++ b/src/styles/utils/mixins.styl
@@ -2,6 +2,10 @@ marginLeftRight($left, $right = $left)
     margin-left $left
     margin-right $right
 
+marginTopBottom($top, $bottom = $top)
+    margin-top $top
+    margin-bottom $bottom
+
 paddingLeftRight($left, $right = $left)
     padding-left $left
     padding-right $right
