--- a/src/styles/comps/page_block.styl
+++ b/src/styles/comps/page_block.styl
@@ -9,7 +9,7 @@
     z-index 0
     transition all .5s ease
     &__title
-        paddingTopBottom(40px)
+        marginTopBottom(20px, 40px)
         Montserrat()
         font-weight 300
         font-size $fontTitle
@@ -26,8 +26,13 @@
                 justify-content space-between
                 .col
                     margin-bottom 120px
-                    flex 1 0 (100/2)%
-                    @media screen and (max-width 1600px)
-                        flex 1 0 (100/2)%
+                    flex 0 0 (100/2)%
+            &--card-delivery
+            &--card-payment
+                justify-content space-between
+                .col
+                    margin-bottom 120px
+                    flex 1 0 (100/3)%
+            
 
         
