--- a/src/styles/comps/ui_kit.styl
+++ b/src/styles/comps/ui_kit.styl
@@ -7,8 +7,10 @@
     border-radius 2px
     transition all .2s ease
     cursor pointer
+    background $greyMain
     color $white
-    &--outline
+    outline none
+    &.button--outline
         background $white
         color $black
         &:hover
@@ -16,9 +18,14 @@
             color $white
             &.button--del
                 background $red
+            &.button--success
+                background $green
     &--del
         border-color $red
         background $red
+    &--success
+        border-color $green
+        background $green
 
 
 .busket
@@ -27,12 +34,11 @@
     cursor pointer
     &-point
         position absolute
-        height 10px
-        width 10px
-        bottom 0
-        right -3px
-        background red
-        border-radius 50%
+        right 10px
+        bottom 4px
+        color $white
+        font-size $fontSubtitle
+        Montserrat()
 
 
 
@@ -67,3 +73,50 @@
         //     background $greyMain
         &.active
             background $greyMain
+
+
+.user-card
+    max-width 460px
+    width 100%
+    marginLeftRight(auto)
+    &__info
+        &:not(:last-of-type)
+            padding-bottom 25px
+            border-bottom 1px solid $greyLight
+        &:not(:first-child)
+            paddingTopBottom(25px)
+        .item
+            Montserrat()
+            display flex
+            align-items center
+            &-property
+                flex 0 0 50%
+                &--fio
+                &--address
+                    font-size $fontSubtitle
+                &--address
+                    padding-bottom 25px
+            &-value
+                flex-grow 1
+                &--empty
+                    display flex
+                    &:before
+                        content ''
+                        display inline-block
+                        max-width 20px
+                        width 100%
+                        height 1px
+                        background $greyMain 
+            &-edit
+                flex 0 0 auto
+                margin-left auto
+                cursor pointer
+                transition all .2s ease
+                path:first-child
+                    fill $greyLight
+                    &:hover
+                        fill $greyMain
+            &:not(:last-child)
+                margin-bottom 10px
+    &__action
+        padding-top 35px
