--- a/src/styles/comps/cards.styl
+++ b/src/styles/comps/cards.styl
@@ -15,7 +15,16 @@
     & > *
         Montserrat()
     &__image
+        width 100px
         margin-right 60px
+        img
+            width 100%
+            height auto
+            transition all .2s ease 
+            transform-origin center
+            &[zoom]
+                &:hover
+                    transform scale(1.8)
     &__info
         max-width 300px
         width 100%
@@ -130,6 +139,9 @@
         Montserrat()
     &__image
         margin-right 60px
+        img
+            width 50px
+            height 50px
     &__info
         display flex
         flex-direction column
