--- a/src/styles/comps/ui_kit.styl
+++ b/src/styles/comps/ui_kit.styl
@@ -10,6 +10,8 @@
     background $greyMain
     color $white
     outline none
+    transition all .2s ease
+    white-space nowrap
     &.button--outline
         background $white
         color $black
